@@ -105,7 +105,7 @@
 (require 'font-lock)
 
 ;; Version.
-(defconst haskell-font-lock-version "$Revision: 1.19 $"
+(defconst haskell-font-lock-version "$Revision: 1.20 $"
   "Version number of haskell-font-lock.")
 (defun haskell-font-lock-version ()
   "Echo the current version of haskell-font-lock in the minibuffer."
@@ -541,15 +541,12 @@ of Moss&Thorn) is non-nil, a Bird-style literate script is assumed.
 Invokes `haskell-font-lock-hook' if not nil.
 
 Use `haskell-font-lock-version' to find out what version this is."
-
-  (interactive)
   (haskell-font-lock-defaults-create)
   (run-hooks 'haskell-font-lock-hook)
   (turn-on-font-lock))
 
 (defun turn-off-haskell-font-lock ()
   "Turns off font locking in current buffer."
-  (interactive)
   (font-lock-mode -1))
 
 ;; Provide ourselves:
