@@ -135,7 +135,6 @@ whitespace.
 Runs `haskell-simple-indent-hook'.
 
 Use `haskell-simple-indent-version' to find out what version this is."
-  (interactive)
   (set (make-local-variable 'haskell-simple-indent-old) indent-line-function)
   (set (make-local-variable 'indent-line-function) 'haskell-simple-indent)
   (run-hooks 'haskell-simple-indent-hook))
@@ -143,7 +142,6 @@ Use `haskell-simple-indent-version' to find out what version this is."
 (defun turn-off-haskell-simple-indent ()
   "Return `indent-line-function' to original value.
 I.e. the value before `turn-on-haskell-simple-indent' was called."
-  (interactive)
   (when (local-variable-p 'haskell-simple-indent-old)
     (setq indent-line-function haskell-simple-indent-old)
     (kill-local-variable 'haskell-simple-indent-old)))
